Fail background validation if restartCatalog runs while validate locks are yielded

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-10-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      restartCatalog can run while yielding when running the validate command with {background: true}. restartCatalog rebuilds the in-memory state of the index catalog, so pointers can be invalidated.

            Assignee:
            Gregory Wlodarek
            Reporter:
            Gregory Wlodarek
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: