SERVER-43823 Fail background validation if restartCatalog runs while validate locks are yielded